<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.dong.externalstorage.MainActivity">

    <LinearLayout
        android:id="@+id/sd_layout"
        android:layout_below="@+id/view_1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/storage_layout_margin_top" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textsize_title"
            android:textColor="@color/wifi_text_color"
            android:text="@string/sd_layout_text"/>

        <LinearLayout
            android:layout_marginTop="6dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="@dimen/space_item_width"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_margin_left"
                android:textSize="@dimen/textsize_large"
                android:textColor="@color/grey_space"
                android:text="@string/local_total_text"/>

            <RelativeLayout
                android:gravity="right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/sd_total_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textsize_large"
                    android:textColor="@color/grey_space"
                    android:text="@string/getting"/>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="@dimen/space_item_width"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_margin_left"
                android:textSize="@dimen/textsize_large"
                android:textColor="@color/grey_space"
                android:text="@string/local_free_text" />

            <RelativeLayout
                android:gravity="right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/sd_free_tv"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textsize_large"
                    android:textColor="@color/grey_space"
                    android:text="@string/getting"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/view_1"
        android:layout_below="@+id/sd_layout"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_translucence"
        />

    <LinearLayout
        android:id="@+id/usb_layout"
        android:layout_below="@+id/view_2"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/storage_layout_margin_top" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textsize_title"
            android:textColor="@color/wifi_text_color"
            android:text="@string/usb_layout_text"/>

        <LinearLayout
            android:layout_marginTop="6dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="@dimen/space_item_width"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_margin_left"
                android:textSize="@dimen/textsize_large"
                android:textColor="@color/grey_space"
                android:text="@string/local_total_text"/>

            <RelativeLayout
                android:gravity="right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/usb_total_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textsize_large"
                    android:textColor="@color/grey_space"
                    android:text="@string/getting"/>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="@dimen/space_item_width"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_margin_left"
                android:textSize="@dimen/textsize_large"
                android:textColor="@color/grey_space"
                android:text="@string/local_free_text" />

            <RelativeLayout
                android:gravity="right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/usbfree_tv"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textsize_large"
                    android:textColor="@color/grey_space"
                    android:text="@string/getting"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/view_2"
        android:layout_below="@+id/sd_layout"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_translucence"
        />

    <Button
        android:id="@+id/btn_update"
        android:text="刷新界面"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
